Fix Step 2 routing visualization to actually show cached blocks
WORKING VERSION! This one actually displays routing decisions.

Issue: Previous version didn't show routing output (empty grep results)

Root Cause:
- grep -f with background process didn't capture output properly
- Log format didn't match expected patterns
- Needed to query logs AFTER each request, not stream continuously

Solution:
1. Use show_routing() function that queries logs after each request
   - kubectl logs --tail=20 | grep 'Selected worker' | tail -1
   - Extracts worker_id and cached_blocks from log line

2. Fixed sed command to parse log format and remove trailing comma
   - OLD: sed 's/.*worker_id=/Worker: /; s/ dp_rank.*cached blocks:/ | Cached blocks:/; s/ tree.*//'
   - NEW: Added s/,.*// to remove trailing comma after cached blocks value
   - Result: Clean output like 'Worker: 2575905244297037343 | Cached blocks: 5'

3. Simplified script:
   - Removed background process (MONITOR_PID)
   - Removed worker activity checks (not needed)
   - Show routing decision immediately after each request
   - 4 requests: physics, physics, math, physics
   - Reduced max_tokens to 20 (faster responses)

4. Updated 'Understanding the Output' section:
   - Removed INFO vs DEBUG distinction (script works at INFO level!)
   - Show actual expected output format
   - Explain worker_id (same = cache hit routing)
   - Explain cached blocks (0 = miss, 5+ = hit)
   - Clear success criteria: same prefix → same worker ID

Example Output:
📤 Request 1: Physics tutor + 'What is gravity?'
   [ROUTING] Worker: 2575905244297037343 | Cached blocks: 0
📤 Request 2: Physics tutor + 'What is velocity?' (SAME PREFIX)
   [ROUTING] Worker: 2575905244297037343 | Cached blocks: 5  ← CACHE HIT!
📤 Request 3: Math tutor + 'What is algebra?' (DIFFERENT PREFIX)
   [ROUTING] Worker: 14409932740882684000 | Cached blocks: 0  ← Different worker
📤 Request 4: Physics tutor + 'Explain momentum' (BACK TO PHYSICS)
   [ROUTING] Worker: 25759052

--- a/03-kv-aware-routing.ipynb
+++ b/03-kv-aware-routing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c4b8f6e6",
+   "id": "cdbd410c",
    "metadata": {},
    "source": [
     "# Lab 3: KV-Aware Routing with Data-Parallel Workers\n",
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "379f60b2",
+   "id": "40223535",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6a67ae9",
+   "id": "6df0b2f0",
    "metadata": {},
    "source": [
     "### Step 2: Install NATS with JetStream\n",
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6bbac9a",
+   "id": "e04871f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7017491f",
+   "id": "85a0cb46",
    "metadata": {},
    "source": [
     "### Step 3: Verify NATS Deployment"
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a705848",
+   "id": "466cfe60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bc6e07b",
+   "id": "bf69446a",
    "metadata": {},
    "source": [
     "### Step 4: Test NATS Connectivity (Optional)"
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5e9326a",
+   "id": "32a4edb7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b977cbd0",
+   "id": "40b2da01",
    "metadata": {},
    "source": [
     "---\n",
@@ -305,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c85f44c",
+   "id": "0deacbb5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b894744e",
+   "id": "153ae545",
    "metadata": {},
    "source": [
     "---\n",
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7c3bce5",
+   "id": "5ba47643",
    "metadata": {},
    "source": [
     "### Step 1: Check Current GPU Usage"
@@ -351,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7cda0adf",
+   "id": "6d08eca0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28659aac",
+   "id": "15468eb4",
    "metadata": {},
    "source": [
     "### Step 2: Delete Lab 1 Deployment (If Still Running)\n",
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15fc19d7",
+   "id": "e092344e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4e10b8b",
+   "id": "3e572161",
    "metadata": {},
    "source": [
     "### Step 3: Verify GPUs Are Available\n",
@@ -431,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d387398",
+   "id": "0853dbd8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ddf5968",
+   "id": "72ad3820",
    "metadata": {},
    "source": [
     "---\n",
@@ -461,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09251e27",
+   "id": "47ffa28e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0dc3ea6e",
+   "id": "ca4df7e4",
    "metadata": {},
    "source": [
     "**Key Configuration Flags:**\n",
@@ -568,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70cba69f",
+   "id": "e84c3338",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e0acf65",
+   "id": "83413b36",
    "metadata": {},
    "source": [
     "### Step 3: Wait for Deployment"
@@ -612,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e861f238",
+   "id": "aefe0968",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5936d34",
+   "id": "8ae1714e",
    "metadata": {},
    "source": [
     "### Step 4: Test Basic Inference"
@@ -651,7 +651,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15346168",
+   "id": "92ad32b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcf6d4d2",
+   "id": "4d44f38a",
    "metadata": {},
    "source": [
     "---\n",
@@ -691,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6ba4e64",
+   "id": "9bcea727",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc8a493a",
+   "id": "2759b48e",
    "metadata": {},
    "source": [
     "**Note on Measuring Cache Benefits**:\n",
@@ -750,13 +750,13 @@
     "\n",
     "### Step 2: Visualize KV-Aware Routing in Action\n",
     "\n",
-    "This script monitors the frontend's routing decisions in real-time, showing which worker handles each request and how many cached blocks are reused."
+    "This script sends requests and shows the frontend's routing decisions, including which worker handles each request and how many cached blocks are reused."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9cf53b48",
+   "id": "bc1b6563",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,27 +764,20 @@
     "export NAMESPACE=${NAMESPACE:-dynamo}\n",
     "export NODE_IP=$(kubectl get nodes -o jsonpath='{.items[0].status.addresses[?(@.type==\"InternalIP\")].address}')\n",
     "\n",
-    "# Get pod names\n",
+    "# Get frontend pod name\n",
     "FRONTEND=$(kubectl get pods -n $NAMESPACE -l nvidia.com/dynamo-component=Frontend -o jsonpath='{.items[0].metadata.name}')\n",
-    "WORKER1=$(kubectl get pods -n $NAMESPACE -l nvidia.com/dynamo-component=VllmWorker -o jsonpath='{.items[0].metadata.name}')\n",
-    "WORKER2=$(kubectl get pods -n $NAMESPACE -l nvidia.com/dynamo-component=VllmWorker -o jsonpath='{.items[1].metadata.name}')\n",
     "\n",
     "echo \"╔════════════════════════════════════════════════════════════════╗\"\n",
     "echo \"║         KV-Aware Routing Visualization                        ║\"\n",
     "echo \"╚════════════════════════════════════════════════════════════════╝\"\n",
     "echo \"\"\n",
     "echo \"Frontend: $FRONTEND\"\n",
-    "echo \"Worker 1: $WORKER1\"\n",
-    "echo \"Worker 2: $WORKER2\"\n",
     "echo \"\"\n",
     "\n",
-    "# Start monitoring frontend routing decisions\n",
-    "kubectl logs -n $NAMESPACE $FRONTEND -f 2>/dev/null | \\\n",
-    "  grep \"Selected worker\" --line-buffered | \\\n",
-    "  awk '{print \"[ROUTING] Worker:\", $(NF-7), \"| Cached blocks:\", $(NF-5)}' &\n",
-    "MONITOR_PID=$!\n",
-    "\n",
-    "sleep 2\n",
+    "# Function to show latest routing decision from logs\n",
+    "show_routing() {\n",
+    "  echo \"   [ROUTING] $(kubectl logs -n $NAMESPACE $FRONTEND --tail=20 | grep 'Selected worker' | tail -1 | sed 's/.*worker_id=/Worker: /; s/ dp_rank.*cached blocks:/ | Cached blocks:/; s/,.*//; s/ tree.*//')\"\n",
+    "}\n",
     "\n",
     "echo \"════════════════════════════════════════════════════════════════\"\n",
     "echo \"Sending Test Requests\"\n",
@@ -801,13 +794,14 @@
     "      {\"role\": \"system\", \"content\": \"You are a physics tutor.\"},\n",
     "      {\"role\": \"user\", \"content\": \"What is gravity?\"}\n",
     "    ],\n",
-    "    \"max_tokens\": 30\n",
-    "  }' | jq -r '.choices[0].message.content | .[0:70]' \n",
+    "    \"max_tokens\": 20\n",
+    "  }' | jq -r '.choices[0].message.content | .[0:50]'\n",
     "\n",
-    "sleep 3\n",
+    "sleep 1\n",
+    "show_routing\n",
+    "echo \"\"\n",
     "\n",
     "# Request 2 - Same physics prefix\n",
-    "echo \"\"\n",
     "echo \"📤 Request 2: Physics tutor + 'What is velocity?' (SAME PREFIX)\"\n",
     "curl -s http://$NODE_IP:30200/v1/chat/completions \\\n",
     "  -H \"Content-Type: application/json\" \\\n",
@@ -817,13 +811,14 @@
     "      {\"role\": \"system\", \"content\": \"You are a physics tutor.\"},\n",
     "      {\"role\": \"user\", \"content\": \"What is velocity?\"}\n",
     "    ],\n",
-    "    \"max_tokens\": 30\n",
-    "  }' | jq -r '.choices[0].message.content | .[0:70]'\n",
+    "    \"max_tokens\": 20\n",
+    "  }' | jq -r '.choices[0].message.content | .[0:50]'\n",
     "\n",
-    "sleep 3\n",
+    "sleep 1\n",
+    "show_routing\n",
+    "echo \"\"\n",
     "\n",
     "# Request 3 - Different prefix\n",
-    "echo \"\"\n",
     "echo \"📤 Request 3: Math tutor + 'What is algebra?' (DIFFERENT PREFIX)\"\n",
     "curl -s http://$NODE_IP:30200/v1/chat/completions \\\n",
     "  -H \"Content-Type: application/json\" \\\n",
@@ -833,13 +828,14 @@
     "      {\"role\": \"system\", \"content\": \"You are a math tutor.\"},\n",
     "      {\"role\": \"user\", \"content\": \"What is algebra?\"}\n",
     "    ],\n",
-    "    \"max_tokens\": 30\n",
-    "  }' | jq -r '.choices[0].message.content | .[0:70]'\n",
+    "    \"max_tokens\": 20\n",
+    "  }' | jq -r '.choices[0].message.content | .[0:50]'\n",
     "\n",
-    "sleep 3\n",
+    "sleep 1\n",
+    "show_routing\n",
+    "echo \"\"\n",
     "\n",
     "# Request 4 - Back to physics\n",
-    "echo \"\"\n",
     "echo \"📤 Request 4: Physics tutor + 'Explain momentum' (BACK TO PHYSICS)\"\n",
     "curl -s http://$NODE_IP:30200/v1/chat/completions \\\n",
     "  -H \"Content-Type: application/json\" \\\n",
@@ -849,49 +845,51 @@
     "      {\"role\": \"system\", \"content\": \"You are a physics tutor.\"},\n",
     "      {\"role\": \"user\", \"content\": \"Explain momentum\"}\n",
     "    ],\n",
-    "    \"max_tokens\": 30\n",
-    "  }' | jq -r '.choices[0].message.content | .[0:70]'\n",
+    "    \"max_tokens\": 20\n",
+    "  }' | jq -r '.choices[0].message.content | .[0:50]'\n",
     "\n",
-    "sleep 2\n",
-    "kill $MONITOR_PID 2>/dev/null\n",
-    "\n",
+    "sleep 1\n",
+    "show_routing\n",
     "echo \"\"\n",
+    "\n",
     "echo \"════════════════════════════════════════════════════════════════\"\n",
     "echo \"✓ Check the [ROUTING] lines above:\"\n",
-    "echo \"  - Requests 1, 2, and 4 (physics) should use the same Worker ID\"\n",
-    "echo \"  - Request 3 (math) may use a different Worker ID\"\n",
-    "echo \"  - 'Cached blocks' shows prefix reuse (higher = more cache hits)\"\n",
+    "echo \"  - Requests 1, 2, and 4 (physics) should use the SAME Worker ID\"\n",
+    "echo \"  - Request 3 (math) may use a DIFFERENT Worker ID\"\n",
+    "echo \"  - 'Cached blocks' increases when router reuses cached prefixes\"\n",
     "echo \"════════════════════════════════════════════════════════════════\""
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "173728b0",
+   "id": "59bcaf2f",
    "metadata": {},
    "source": [
     "**Understanding the Output:**\n",
     "\n",
-    "Look for these key indicators in the `[ROUTING]` lines:\n",
+    "You'll see `[ROUTING]` lines showing the routing decisions:\n",
     "\n",
-    "1. **worker_id** - Unique identifier for each worker pod\n",
-    "   - Same worker_id = request routed to same GPU\n",
-    "   - Different worker_id = request routed to different GPU\n",
-    "\n",
-    "2. **cached blocks** - Number of KV cache blocks reused (**THE KEY METRIC!**)\n",
-    "   - `cached blocks: 0` = No cache hit (cold start or different prefix)\n",
-    "   - `cached blocks: N` (N > 0) = Cache hit! Router reused N blocks from memory\n",
-    "\n",
-    "3. **Routing pattern** - Requests with the same system prompt should route to the same worker\n",
-    "\n",
-    "**Example of successful KV-aware routing:**\n",
     "```\n",
-    "[ROUTING] Worker: 2575905244297037343 | Cached blocks: 0     ← First \"physics\" request\n",
-    "[ROUTING] Worker: 2575905244297037343 | Cached blocks: 5     ← Second \"physics\" request (CACHE HIT!)\n",
+    "[ROUTING] Worker: 2575905244297037343 | Cached blocks: 0     ← First \"physics\" request  \n",
+    "[ROUTING] Worker: 2575905244297037343 | Cached blocks: 5     ← Second \"physics\" (CACHE HIT!)\n",
     "[ROUTING] Worker: 14409932740882684000 | Cached blocks: 0    ← \"Math\" request (different worker)\n",
-    "[ROUTING] Worker: 2575905244297037343 | Cached blocks: 5     ← Back to \"physics\" (same worker, cache hit!)\n",
+    "[ROUTING] Worker: 2575905244297037343 | Cached blocks: 5     ← Back to \"physics\" (cache hit!)\n",
     "```\n",
     "\n",
-    "The router intelligently directs physics requests to worker `257590...` and math requests to worker `144099...`, maximizing cache reuse!\n",
+    "**Key metrics:**\n",
+    "- **Worker ID**: Unique identifier for each worker pod\n",
+    "  - Same ID = same GPU = request routed to worker with cached data\n",
+    "  - Different ID = different GPU = new worker, no cache available\n",
+    "  \n",
+    "- **Cached blocks** (**THE KEY METRIC!**): Number of KV cache blocks reused\n",
+    "  - `0` = Cache miss (first time seeing this prefix)\n",
+    "  - `5+` = Cache hit! Router reused N blocks from worker's memory\n",
+    "  \n",
+    "- **Routing pattern**: Requests with same prefix → same worker → cache reuse\n",
+    "  - Physics requests (1, 2, 4) → Worker `257590...` (consistent routing)\n",
+    "  - Math request (3) → Worker `144099...` (different prefix, different worker)\n",
+    "\n",
+    "This proves KV-aware routing is working! The router intelligently tracks which worker has which prefixes cached and directs requests accordingly, maximizing cache reuse and GPU efficiency.\n",
     "\n",
     "### Step 3: Verify Deployment Status"
    ]
@@ -899,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54cd634d",
+   "id": "027a301f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -951,7 +949,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fadbde08",
+   "id": "6658ea4e",
    "metadata": {},
    "source": [
     "---\n",
@@ -983,7 +981,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fdb76cac",
+   "id": "6a5b72ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1006,7 +1004,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e208b24c",
+   "id": "1d730e3a",
    "metadata": {},
    "source": [
     "### Workers Not Discovered"
@@ -1015,7 +1013,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97299ddd",
+   "id": "8b30d641",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1039,7 +1037,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "856b92cd",
+   "id": "556cfe34",
    "metadata": {},
    "source": [
     "### No Requests Reaching Workers"
@@ -1048,7 +1046,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf3a0b17",
+   "id": "5e46d015",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1072,7 +1070,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9823a068",
+   "id": "6b1f44c4",
    "metadata": {},
    "source": [
     "### Understanding Cache Sharing with NIXL\n",
@@ -1106,7 +1104,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd40cb50",
+   "id": "b4b44799",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1123,7 +1121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6eaf404c",
+   "id": "2a6ac4c9",
    "metadata": {},
    "source": [
     "### Step 2: Verify Lab 1 Deployment is Still Running\n",
@@ -1134,7 +1132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b036bde",
+   "id": "7ab59c30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1159,7 +1157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c6efeea",
+   "id": "dfe4763e",
    "metadata": {},
    "source": [
     "---\n",
@@ -1176,7 +1174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2510ea37",
+   "id": "228f1c9b",
    "metadata": {},
    "source": [
     "### Community Resources\n",
